log
Thu Apr  7 11:54:10 HSP 2022: 
 hashmap.c | 47 ++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 46 insertions(+), 1 deletion(-)
 tests:  0|0
68105bc
Thu Apr  7 11:54:42 HSP 2022: 
 tests:  0|0
d1269ee
Thu Apr  7 11:56:23 HSP 2022: 
 tests:  0|0
792c724
Thu Apr  7 11:59:20 HSP 2022: 
 tests:  0|0
a382851
Thu Apr  7 12:00:12 HSP 2022: 
 tests:  0|0
af5c632
Thu Apr  7 12:05:43 HSP 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:96:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return &Map;
            ^~~~
hashmap.c:96:12: error: function returns address of local variable [-Werror=return-local-addr]
cc1.exe: all warnings being treated as errors
Compilation failed
8bcb02a
Thu Apr  7 12:05:52 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b64473
Thu Apr  7 12:07:02 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6326d8d
Thu Apr  7 12:12:48 HSP 2022: 
 hashmap.c | 20 +++++---------------
 1 file changed, 5 insertions(+), 15 deletions(-)
 tests:  6|4
total_score: 30/70
d364622
Fri Apr  8 14:39:32 HSP 2022: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:99:15: error: statement with no effect [-Werror=unused-value]
            map->size;
            ~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1bf6955
Fri Apr  8 14:39:46 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
95f3849
Fri Apr  8 14:49:38 HSP 2022: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  11|3
total_score: 40/70
e29b10d
Fri Apr  8 14:50:48 HSP 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|3
total_score: 40/70
08fa625
Fri Apr  8 14:52:02 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|3
total_score: 40/70
f1f63bc
Fri Apr  8 14:53:05 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|3
total_score: 40/70
a67c6ae
Fri Apr  8 15:06:26 HSP 2022: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
12cd891
Fri Apr  8 20:42:06 HSP 2022: 
 hashmap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  11|3
total_score: 40/70
c1e14aa
Fri Apr  8 20:42:42 HSP 2022: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:72:9: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     aux = map->buckets;
         ^
hashmap.c:71:13: error: variable 'aux' set but not used [-Werror=unused-but-set-variable]
     Pair ***aux = (Pair***) malloc(sizeof(Pair**));
             ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
a35b3a0
